# TestKitdex

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: project_workflow.md  rule_bdd_tests.mdc  rule_practices.md  rule_practices.mdc  rule_test_factories.mdc  rule_test_performance.mdc  rule_unit_tests.mdc
.github/workflows/: test.yml
data/testkit_sample/: INDEX.md  di.py  index.json  testkit_facade.py  testkit_main.py  testkit_specialized.py
docs/: ADR_001_TESTING_TOOLS.md  ADR_002_FACTORY_PATTERN_MIGRATION.md  ADR_003_TESTKIT_OPTIMIZATION.md  ADR_004_TEST_MIGRATION_TO_TESTKIT.md  BDD_BUILDERS.md  DEVELOPMENT.md  README.md
features/: diff.feature  environment.py  error_codes.md  indexing.feature  mcp_api.feature  reports.feature  search.feature  suggestions.feature  tag_analysis.feature  tag_hierarchy.feature
features/steps/: common_steps.py  common_steps.py.backup  indexing_steps.py  step_dispatch.py.backup
plans/: DEVELOPMENT_PLAN.md  PARSER_COMPLETION_REPORT.md  README.md
plans/completed/: READINESS_STATUS.md  README.md  REFACTORING_COMMON_STEPS.md
plans/current/: ARCHITECTURE_PLAN.md  README.md
plans/reports/: PARSER_DIAGNOSTIC_REPORT.md  PYTEST_IMPORT_FIX_REPORT.md  README.md  REFACTORING_COMMON_STEPS_REPORT.md
scripts/: test_with_act.sh
tests/: conftest.py  pytest.ini
tests/factories/: __init__.py  csharp_code_factory.py  csharp_method_factory.py
tests/integration/: test_parser_integration.py
tests/unit/: test_common_steps_refactoring.py  test_database.py  test_factories.py  (+1 more)
(+41 files in other folders)
